--- a/SortByColumnNameApp/SortByColumnNameApp.csproj
+++ b/SortByColumnNameApp/SortByColumnNameApp.csproj
@@ -19,6 +19,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="ConfigurationLibrary" Version="1.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -33,9 +37,10 @@
 		<PackageReference Include="Spectre.Console" Version="0.44.0" />
 	</ItemGroup>
 
-	<ItemGroup>
-	  <!--<ProjectReference Include="..\EntityFrameworkCoreHelpers\EntityFrameworkCoreHelpers.csproj" />-->
+	<ItemGroup><!--<ProjectReference Include="..\EntityFrameworkCoreHelpers\EntityFrameworkCoreHelpers.csproj" />-->
 	  <!--<ProjectReference Include="..\NorthWind2022Library\NorthWind2022Library.csproj" />-->
+	
+	  <Folder Include="DataScripts\" />
 	</ItemGroup>
 
 	<ItemGroup>
