--- a/EnumGetDescriptionsApp/EnumGetDescriptionsApp.csproj
+++ b/EnumGetDescriptionsApp/EnumGetDescriptionsApp.csproj
@@ -26,4 +26,24 @@
 		<PackageReference Include="Spectre.Console" Version="0.44.0" />
 	</ItemGroup>
 
+
+	<ItemGroup>
+	  <None Update="Classes\TextTemplate1.tt">
+	    <Generator>TextTemplatingFileGenerator</Generator>
+	    <LastGenOutput>TextTemplate1.cs</LastGenOutput>
+	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Classes\TextTemplate1.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>TextTemplate1.tt</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
 </Project>
