Refactor wine data processing and update project settings
- Consolidated string values in `OperationsEnums.cs` for improved readability and clarified comments regarding case sensitivity of `Enum.Parse` and `Enum.TryParse`.
- Updated method calls in `Program.cs` to change execution flow.
- Modified `WineContext.cs` to use a dynamic connection string and conditional data seeding.
- Changed target framework to .NET 9.0 in `EnumHasConversionSample.csproj` and added new package references.
- Introduced a new initialization method in `Program.cs` for console setup and dependency injection.
- Added `Utilities.cs` for database existence checks using Dapper.
- Created `appsettings.json` for configuration management.
- Developed `Operations.cs` for generating wine type data in JSON and C# enum formats.
- Added `WineType.cs` and `WineTypeEntry.cs` for defining wine types.
- Included `CreatePopulate.sql` for database and table creation with initial data.
- Introduced `DirectoryHelper.cs` and `SqlHelper.cs` for project folder and SQL command handling.
- Added new PNG and ICO files for UI branding.
- Created `GlobalUsings.cs` to manage global using directives.
- Established `WineToJsonApp` namespace for modular organization.

by Karen

--- a/EnumHasConversionSample/EnumHasConversionSample.csproj
+++ b/EnumHasConversionSample/EnumHasConversionSample.csproj
@@ -1,11 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<ApplicationIcon>assets\csharp.ico</ApplicationIcon>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <NoWarn>1701;1702;CS8602</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <NoWarn>1701;1702;CS8602</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -21,9 +29,11 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
+		<PackageReference Include="ConsoleConfigurationLibrary" Version="1.0.0.10" />
+		<PackageReference Include="Dapper" Version="2.1.66" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
 	</ItemGroup>
-
+	
 
 	<ItemGroup>
 	  <Compile Update="Models\WineType.cs">
@@ -34,6 +44,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Update="appsettings.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	  <None Update="Models\WineType.tt">
 	    <LastGenOutput>WineType.cs</LastGenOutput>
 	    <Generator>TextTemplatingFileGenerator</Generator>
