--- a/EnumGeneralApp/EnumGeneralApp.csproj
+++ b/EnumGeneralApp/EnumGeneralApp.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
 	</PropertyGroup>
@@ -24,14 +24,14 @@
 		<PackageReference Include="ConsoleHelperLibrary" Version="1.0.0" />
 	</ItemGroup>
 
-	<ItemGroup>
-		<!-- ReSharper disable once VulnerablePackage -->
+	<!--<ItemGroup>
+		--><!-- ReSharper disable once VulnerablePackage --><!--
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-	</ItemGroup>
+	</ItemGroup>-->
 
 	<ItemGroup>
 		<PackageReference Include="Spectre.Console" Version="0.46.0" />
