Enhance application structure and performance
- Added logging capabilities in Context.cs for better SQL command monitoring.
- Updated WineGroupItem.cs with XML documentation for clarity.
- Utilized AsNoTracking() in Program.cs to improve query performance.
- Modified WineApp.csproj to manage markdown files as content.
- Enhanced Operations.cs with additional using directives for data annotations.
- Updated WineType.cs to include display name annotations.
- Expanded WorkingEums.sln with new projects.
- Introduced Chat.md with SQL scripts and Dapper usage examples.
- Added WineGroup.cs to represent grouped wine collections.
- Updated DapperSql.sql with various SQL queries for data manipulation.

by Karen

--- a/WineApp/WineApp.csproj
+++ b/WineApp/WineApp.csproj
@@ -8,11 +8,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Remove="Chat.md" />
 		<None Remove="readme.md" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Content Include="assets\csharp.ico" />
+		<Content Include="Chat.md" />
 		<Content Include="readme.md" />
 	</ItemGroup>
 
