--- a/WineApp/WineApp.csproj
+++ b/WineApp/WineApp.csproj
@@ -22,6 +22,10 @@
 		<PackageReference Include="ConsoleConfigurationLibrary" Version="1.0.0.10" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+		<PackageReference Include="Dapper" Version="2.1.66" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="ConfigurationLibrary" Version="1.0.6" />
