Refactor WineService and update UI components
- Updated SQL query in WineService.cs to use a constant string for improved readability.
- Changed card background color in Index.cshtml and standardized text casing for consistency.
- Removed Privacy.cshtml and its model, indicating the removal of the privacy policy page.
- Cleaned up using directives and comments in Program.cs for clarity.
- Added a new folder for assets in WineWebApplication.csproj.
- Improved formatting and added an image reference in readme.md for better documentation.

by Karen

--- a/WineWebApplication/WineWebApplication.csproj
+++ b/WineWebApplication/WineWebApplication.csproj
@@ -19,4 +19,8 @@
 		<PackageReference Include="Dapper" Version="2.1.66" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="assets\" />
+	</ItemGroup>
+
 </Project>
